add overflow and batch feature extraction call